[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/blue-square.svg.hi.png" type="Texture" id=1]
[ext_resource path="res://scenes/menus/Save files.gd" type="Script" id=2]

[node name="Save files" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = false
script = ExtResource( 2 )
scroll_duration = 0.1

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 6640.0
margin_bottom = 1068.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
margin_top = 237.0
margin_right = 6640.0
margin_bottom = 830.0
mouse_filter = 2
custom_constants/margin_right = 1920
custom_constants/margin_left = 1920

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/MarginContainer"]
margin_left = 1920.0
margin_right = 4720.0
margin_bottom = 593.0
mouse_filter = 2
custom_constants/separation = 25

[node name="save_1" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_right = 540.0
margin_bottom = 593.0
texture = ExtResource( 1 )

[node name="Save1_button" type="Button" parent="CenterContainer/MarginContainer/HBoxContainer/save_1"]
margin_left = 190.0
margin_top = 514.0
margin_right = 346.0
margin_bottom = 557.0
mouse_default_cursor_shape = 2

[node name="save_2" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 565.0
margin_right = 1105.0
margin_bottom = 593.0
texture = ExtResource( 1 )

[node name="Save2_button" type="Button" parent="CenterContainer/MarginContainer/HBoxContainer/save_2"]
margin_left = 190.0
margin_top = 514.0
margin_right = 346.0
margin_bottom = 557.0
mouse_default_cursor_shape = 2
custom_colors/font_color_disabled = Color( 1, 0, 0, 1 )
custom_colors/font_color_focus = Color( 1, 0.027451, 0.027451, 1 )
text = "Save1"

[node name="save_3" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 1130.0
margin_right = 1670.0
margin_bottom = 593.0
texture = ExtResource( 1 )

[node name="Save3_button" type="Button" parent="CenterContainer/MarginContainer/HBoxContainer/save_3"]
margin_left = 190.0
margin_top = 514.0
margin_right = 346.0
margin_bottom = 557.0
mouse_default_cursor_shape = 2

[node name="save_4" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 1695.0
margin_right = 2235.0
margin_bottom = 593.0
texture = ExtResource( 1 )

[node name="Save4_button" type="Button" parent="CenterContainer/MarginContainer/HBoxContainer/save_4"]
margin_left = 190.0
margin_top = 514.0
margin_right = 346.0
margin_bottom = 557.0
mouse_default_cursor_shape = 2

[node name="save_5" type="TextureRect" parent="CenterContainer/MarginContainer/HBoxContainer"]
margin_left = 2260.0
margin_right = 2800.0
margin_bottom = 593.0
texture = ExtResource( 1 )

[node name="Save5_button" type="Button" parent="CenterContainer/MarginContainer/HBoxContainer/save_5"]
margin_left = 190.0
margin_top = 514.0
margin_right = 346.0
margin_bottom = 557.0
mouse_default_cursor_shape = 2

[connection signal="gui_input" from="." to="." method="_on_Save_files_gui_input"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/save_1/Save1_button" to="." method="_on_Save1_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/save_2/Save2_button" to="." method="_on_Save2_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/save_3/Save3_button" to="." method="_on_Save3_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/save_4/Save4_button" to="." method="_on_Save4_button_pressed"]
[connection signal="pressed" from="CenterContainer/MarginContainer/HBoxContainer/save_5/Save5_button" to="." method="_on_Save5_button_pressed"]
